// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`createDbWorker initializes correctly 1`] = `
[
  {
    "appOwner": {
      "encryptionKey": Uint8Array [
        214,
        142,
        243,
        254,
        221,
        13,
        246,
        19,
        136,
        198,
        193,
        14,
        183,
        237,
        206,
        51,
        171,
        193,
        65,
        231,
        26,
        97,
        31,
        142,
        157,
        180,
        17,
        113,
        106,
        171,
        129,
        26,
      ],
      "id": "m4Swbg7PvGPpEyB_q4JY9",
      "mnemonic": "call brass keen rough true spy dream robot useless ignore anxiety badge",
      "type": "AppOwner",
      "writeKey": Uint8Array [
        193,
        200,
        155,
        104,
        173,
        156,
        172,
        55,
        27,
        230,
        228,
        51,
        167,
        204,
        43,
        8,
      ],
    },
    "isFirst": true,
    "type": "onInit",
  },
]
`;

exports[`createDbWorker initializes correctly 2`] = `
{
  "schema": {
    "indexes": [
      {
        "name": "evolu_history_ownerId_timestamp",
        "sql": "create index evolu_history_ownerId_timestamp on evolu_history (
          "ownerId",
          "timestamp"
        )",
      },
      {
        "name": "evolu_history_ownerId_table_id_column_timestampDesc",
        "sql": "create unique index evolu_history_ownerId_table_id_column_timestampDesc on evolu_history (
          "ownerId",
          "table",
          "id",
          "column",
          "timestamp" desc
        )",
      },
      {
        "name": "evolu_timestamp_index",
        "sql": "create index evolu_timestamp_index on evolu_timestamp (
        "ownerId",
        "l",
        "t",
        "h1",
        "h2",
        "c"
      )",
      },
    ],
    "tables": [
      {
        "columns": [
          "protocolVersion",
        ],
        "name": "evolu_version",
      },
      {
        "columns": [
          "clock",
          "appOwnerId",
          "appOwnerEncryptionKey",
          "appOwnerWriteKey",
          "appOwnerMnemonic",
        ],
        "name": "evolu_config",
      },
      {
        "columns": [
          "ownerId",
          "table",
          "id",
          "column",
          "timestamp",
          "value",
        ],
        "name": "evolu_history",
      },
      {
        "columns": [
          "id",
          "name",
          "createdAt",
          "updatedAt",
          "isDeleted",
        ],
        "name": "testTable",
      },
      {
        "columns": [
          "id",
          "name",
          "createdAt",
          "updatedAt",
          "isDeleted",
        ],
        "name": "_testTable",
      },
      {
        "columns": [
          "ownerId",
          "t",
          "h1",
          "h2",
          "c",
          "l",
        ],
        "name": "evolu_timestamp",
      },
    ],
  },
  "tables": [
    {
      "name": "evolu_version",
      "rows": [
        {
          "protocolVersion": 0,
        },
      ],
    },
    {
      "name": "evolu_config",
      "rows": [
        {
          "appOwnerEncryptionKey": {
            "data": [
              214,
              142,
              243,
              254,
              221,
              13,
              246,
              19,
              136,
              198,
              193,
              14,
              183,
              237,
              206,
              51,
              171,
              193,
              65,
              231,
              26,
              97,
              31,
              142,
              157,
              180,
              17,
              113,
              106,
              171,
              129,
              26,
            ],
            "type": "Buffer",
          },
          "appOwnerId": "m4Swbg7PvGPpEyB_q4JY9",
          "appOwnerMnemonic": "call brass keen rough true spy dream robot useless ignore anxiety badge",
          "appOwnerWriteKey": {
            "data": [
              193,
              200,
              155,
              104,
              173,
              156,
              172,
              55,
              27,
              230,
              228,
              51,
              167,
              204,
              43,
              8,
            ],
            "type": "Buffer",
          },
          "clock": "1970-01-01T00:00:00.000Z-0000-0fb0b7912c7c1fca",
        },
      ],
    },
    {
      "name": "evolu_history",
      "rows": [],
    },
    {
      "name": "testTable",
      "rows": [],
    },
    {
      "name": "_testTable",
      "rows": [],
    },
    {
      "name": "evolu_timestamp",
      "rows": [],
    },
  ],
}
`;

exports[`local mutation 1`] = `
[
  {
    "appOwner": {
      "encryptionKey": Uint8Array [
        214,
        142,
        243,
        254,
        221,
        13,
        246,
        19,
        136,
        198,
        193,
        14,
        183,
        237,
        206,
        51,
        171,
        193,
        65,
        231,
        26,
        97,
        31,
        142,
        157,
        180,
        17,
        113,
        106,
        171,
        129,
        26,
      ],
      "id": "m4Swbg7PvGPpEyB_q4JY9",
      "mnemonic": "call brass keen rough true spy dream robot useless ignore anxiety badge",
      "type": "AppOwner",
      "writeKey": Uint8Array [
        193,
        200,
        155,
        104,
        173,
        156,
        172,
        55,
        27,
        230,
        228,
        51,
        167,
        204,
        43,
        8,
      ],
    },
    "isFirst": true,
    "type": "onInit",
  },
  {
    "onCompleteIds": [],
    "patches": [],
    "tabId": "rzvJgh9kwKG2sAKxc3jir",
    "type": "onChange",
  },
  {
    "tabId": "rzvJgh9kwKG2sAKxc3jir",
    "type": "onReceive",
  },
]
`;

exports[`local mutation 2`] = `
[
  {
    "name": "evolu_version",
    "rows": [
      {
        "protocolVersion": 0,
      },
    ],
  },
  {
    "name": "evolu_config",
    "rows": [
      {
        "appOwnerEncryptionKey": {
          "data": [
            214,
            142,
            243,
            254,
            221,
            13,
            246,
            19,
            136,
            198,
            193,
            14,
            183,
            237,
            206,
            51,
            171,
            193,
            65,
            231,
            26,
            97,
            31,
            142,
            157,
            180,
            17,
            113,
            106,
            171,
            129,
            26,
          ],
          "type": "Buffer",
        },
        "appOwnerId": "m4Swbg7PvGPpEyB_q4JY9",
        "appOwnerMnemonic": "call brass keen rough true spy dream robot useless ignore anxiety badge",
        "appOwnerWriteKey": {
          "data": [
            193,
            200,
            155,
            104,
            173,
            156,
            172,
            55,
            27,
            230,
            228,
            51,
            167,
            204,
            43,
            8,
          ],
          "type": "Buffer",
        },
        "clock": "1970-01-01T00:00:00.000Z-0000-30599c113e2fe27d",
      },
    ],
  },
  {
    "name": "evolu_history",
    "rows": [],
  },
  {
    "name": "testTable",
    "rows": [],
  },
  {
    "name": "_testTable",
    "rows": [
      {
        "createdAt": "1970-01-01T00:00:00.002Z",
        "id": "2XpJicKJoimhRPBjgFeyT",
        "isDeleted": null,
        "name": "test",
        "updatedAt": "1970-01-01T00:00:00.002Z",
      },
    ],
  },
  {
    "name": "evolu_timestamp",
    "rows": [],
  },
]
`;

exports[`local mutation 3`] = `
[
  {
    "name": "evolu_version",
    "rows": [
      {
        "protocolVersion": 0,
      },
    ],
  },
  {
    "name": "evolu_config",
    "rows": [
      {
        "appOwnerEncryptionKey": {
          "data": [
            214,
            142,
            243,
            254,
            221,
            13,
            246,
            19,
            136,
            198,
            193,
            14,
            183,
            237,
            206,
            51,
            171,
            193,
            65,
            231,
            26,
            97,
            31,
            142,
            157,
            180,
            17,
            113,
            106,
            171,
            129,
            26,
          ],
          "type": "Buffer",
        },
        "appOwnerId": "m4Swbg7PvGPpEyB_q4JY9",
        "appOwnerMnemonic": "call brass keen rough true spy dream robot useless ignore anxiety badge",
        "appOwnerWriteKey": {
          "data": [
            193,
            200,
            155,
            104,
            173,
            156,
            172,
            55,
            27,
            230,
            228,
            51,
            167,
            204,
            43,
            8,
          ],
          "type": "Buffer",
        },
        "clock": "1970-01-01T00:00:00.000Z-0000-30599c113e2fe27d",
      },
    ],
  },
  {
    "name": "evolu_history",
    "rows": [],
  },
  {
    "name": "testTable",
    "rows": [],
  },
  {
    "name": "_testTable",
    "rows": [],
  },
  {
    "name": "evolu_timestamp",
    "rows": [],
  },
]
`;

exports[`mutate before init 1`] = `
[
  {
    "appOwner": {
      "encryptionKey": Uint8Array [
        214,
        142,
        243,
        254,
        221,
        13,
        246,
        19,
        136,
        198,
        193,
        14,
        183,
        237,
        206,
        51,
        171,
        193,
        65,
        231,
        26,
        97,
        31,
        142,
        157,
        180,
        17,
        113,
        106,
        171,
        129,
        26,
      ],
      "id": "m4Swbg7PvGPpEyB_q4JY9",
      "mnemonic": "call brass keen rough true spy dream robot useless ignore anxiety badge",
      "type": "AppOwner",
      "writeKey": Uint8Array [
        193,
        200,
        155,
        104,
        173,
        156,
        172,
        55,
        27,
        230,
        228,
        51,
        167,
        204,
        43,
        8,
      ],
    },
    "isFirst": true,
    "type": "onInit",
  },
  {
    "onCompleteIds": [],
    "patches": [],
    "tabId": "-bM9tdhdvUIv7-7QDf11m",
    "type": "onChange",
  },
  {
    "tabId": "-bM9tdhdvUIv7-7QDf11m",
    "type": "onReceive",
  },
]
`;

exports[`mutate before init 2`] = `
[
  {
    "name": "evolu_version",
    "rows": [
      {
        "protocolVersion": 0,
      },
    ],
  },
  {
    "name": "evolu_config",
    "rows": [
      {
        "appOwnerEncryptionKey": {
          "data": [
            214,
            142,
            243,
            254,
            221,
            13,
            246,
            19,
            136,
            198,
            193,
            14,
            183,
            237,
            206,
            51,
            171,
            193,
            65,
            231,
            26,
            97,
            31,
            142,
            157,
            180,
            17,
            113,
            106,
            171,
            129,
            26,
          ],
          "type": "Buffer",
        },
        "appOwnerId": "m4Swbg7PvGPpEyB_q4JY9",
        "appOwnerMnemonic": "call brass keen rough true spy dream robot useless ignore anxiety badge",
        "appOwnerWriteKey": {
          "data": [
            193,
            200,
            155,
            104,
            173,
            156,
            172,
            55,
            27,
            230,
            228,
            51,
            167,
            204,
            43,
            8,
          ],
          "type": "Buffer",
        },
        "clock": "1970-01-01T00:00:00.000Z-0000-0db883b25f327a10",
      },
    ],
  },
  {
    "name": "evolu_history",
    "rows": [],
  },
  {
    "name": "testTable",
    "rows": [],
  },
  {
    "name": "_testTable",
    "rows": [
      {
        "createdAt": "1970-01-01T00:00:00.001Z",
        "id": "TJn7gEx0z1duDCZbms4ro",
        "isDeleted": null,
        "name": "test",
        "updatedAt": "1970-01-01T00:00:00.001Z",
      },
    ],
  },
  {
    "name": "evolu_timestamp",
    "rows": [],
  },
]
`;

exports[`mutations 1`] = `
[
  {
    "appOwner": {
      "encryptionKey": Uint8Array [
        214,
        142,
        243,
        254,
        221,
        13,
        246,
        19,
        136,
        198,
        193,
        14,
        183,
        237,
        206,
        51,
        171,
        193,
        65,
        231,
        26,
        97,
        31,
        142,
        157,
        180,
        17,
        113,
        106,
        171,
        129,
        26,
      ],
      "id": "m4Swbg7PvGPpEyB_q4JY9",
      "mnemonic": "call brass keen rough true spy dream robot useless ignore anxiety badge",
      "type": "AppOwner",
      "writeKey": Uint8Array [
        193,
        200,
        155,
        104,
        173,
        156,
        172,
        55,
        27,
        230,
        228,
        51,
        167,
        204,
        43,
        8,
      ],
    },
    "isFirst": true,
    "type": "onInit",
  },
  {
    "onCompleteIds": [],
    "patches": [],
    "tabId": "4W_18Oy2YBz9_EC0v62hC",
    "type": "onChange",
  },
  {
    "tabId": "4W_18Oy2YBz9_EC0v62hC",
    "type": "onReceive",
  },
]
`;

exports[`mutations 2`] = `
[
  {
    "name": "evolu_version",
    "rows": [
      {
        "protocolVersion": 0,
      },
    ],
  },
  {
    "name": "evolu_config",
    "rows": [
      {
        "appOwnerEncryptionKey": {
          "data": [
            214,
            142,
            243,
            254,
            221,
            13,
            246,
            19,
            136,
            198,
            193,
            14,
            183,
            237,
            206,
            51,
            171,
            193,
            65,
            231,
            26,
            97,
            31,
            142,
            157,
            180,
            17,
            113,
            106,
            171,
            129,
            26,
          ],
          "type": "Buffer",
        },
        "appOwnerId": "m4Swbg7PvGPpEyB_q4JY9",
        "appOwnerMnemonic": "call brass keen rough true spy dream robot useless ignore anxiety badge",
        "appOwnerWriteKey": {
          "data": [
            193,
            200,
            155,
            104,
            173,
            156,
            172,
            55,
            27,
            230,
            228,
            51,
            167,
            204,
            43,
            8,
          ],
          "type": "Buffer",
        },
        "clock": "1970-01-01T00:00:00.000Z-0001-7b30e5c418ca52c3",
      },
    ],
  },
  {
    "name": "evolu_history",
    "rows": [
      {
        "column": "name",
        "id": {
          "data": [
            142,
            234,
            71,
            9,
            213,
            68,
            164,
            29,
            160,
            190,
            95,
            223,
            168,
            17,
            36,
            152,
          ],
          "type": "Buffer",
        },
        "ownerId": {
          "data": [
            155,
            132,
            176,
            110,
            14,
            207,
            188,
            99,
            233,
            19,
            32,
            127,
            171,
            130,
            88,
            244,
          ],
          "type": "Buffer",
        },
        "table": "testTable",
        "timestamp": {
          "data": [
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            1,
            123,
            48,
            229,
            196,
            24,
            202,
            82,
            195,
          ],
          "type": "Buffer",
        },
        "value": "test",
      },
    ],
  },
  {
    "name": "testTable",
    "rows": [
      {
        "createdAt": null,
        "id": "jupHCdVEpB2gvl_fqBEkm",
        "isDeleted": null,
        "name": "test",
        "updatedAt": "1970-01-01T00:00:00.000Z",
      },
    ],
  },
  {
    "name": "_testTable",
    "rows": [],
  },
  {
    "name": "evolu_timestamp",
    "rows": [
      {
        "c": 1,
        "h1": 112010336006712,
        "h2": 246093702771481,
        "l": 2,
        "ownerId": {
          "data": [
            155,
            132,
            176,
            110,
            14,
            207,
            188,
            99,
            233,
            19,
            32,
            127,
            171,
            130,
            88,
            244,
          ],
          "type": "Buffer",
        },
        "t": {
          "data": [
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            1,
            123,
            48,
            229,
            196,
            24,
            202,
            82,
            195,
          ],
          "type": "Buffer",
        },
      },
    ],
  },
]
`;

exports[`reset 1`] = `
{
  "schema": {
    "indexes": [],
    "tables": [],
  },
  "tables": [],
}
`;
